--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,19 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #F0F2F0;
+  min-height: 10vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 1rem;
+  color: black;
+  box-shadow: 2px 3px 8px 2px rgba(0,0,0,0.81);
+
+
 }
 
 .App-link {
