--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,13 @@
     transform: rotate(360deg);
   }
 }
+
+.itemListContainer{
+  margin: 3rem auto;
+  background-color: #F0F2F0;
+  padding: 3rem;
+  border: none;
+  box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
+-webkit-box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
+}
