context and carview

--- a/src/components/Contador.css
+++ b/src/components/Contador.css
@@ -5,12 +5,11 @@
     border: solid 1px;
     background-color: white;
 }
-.count-btn{
-        border-radius: 0px;
-        border: none;
-        font-size: 1.7rem;  
-}
 
-.btn-add-cart{
-    background-color: #181cfc;
+.contador-btn{
+    border-radius: 0px;
+    border: none;
+    font-size: 1.7rem;
+    padding: 0rem;  
+    margin: 0.7rem;
 }
