--- a/src/components/CartView.css
+++ b/src/components/CartView.css
@@ -7,3 +7,47 @@
     text-align: left;
     
 }
+.items-list{
+    padding: 1rem;
+    
+    margin-top: 2rem;
+}
+.cart-header-no-border{
+    width: 80%;
+    
+}
+.total-container{
+    font-weight: bolder;
+    margin-top: 2rem;
+    width: 100%;
+}
+.strong h3{
+    border-top: #c5c5c5 solid 1px ;
+    padding-top: 2rem;
+    font-weight: bolder;
+}
+.cartContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 3rem 1rem;
+    background-color: #F0F2F0;
+    padding: 3rem;
+    border: none;
+    box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);      
+}
+
+.summaryContainer{
+   max-height: 100%;
+    display: flex;    
+    align-items: center;
+    margin: 3rem 1rem;
+    background-color: #F0F2F0;
+    padding: 2rem;
+    border: none;
+    box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
+  }
