--- a/src/components/Contador.css
+++ b/src/components/Contador.css
@@ -1,5 +1,5 @@
 .contenedor{
-    width: 100%;
+ 
     justify-content: space-between;
     align-items: center;
     border: solid 1px;
@@ -9,7 +9,7 @@
 .contador-btn{
     border-radius: 0px;
     border: none;
-    font-size: 1.7rem;
-    padding: 0rem;  
-    margin: 0.7rem;
+    font-size: 1rem;
+    padding: .5rem;  
+    margin: 0rem;
 }
