--- a/src/components/article.css
+++ b/src/components/article.css
@@ -2,7 +2,8 @@
     width: auto;
     height: 200px;
     margin: 0 auto;
-    max-width: 80%;  
+    max-width: 80%;
+    padding: 2rem;  
     
 }
 *{
