--- a/src/components/CartView.css
+++ b/src/components/CartView.css
@@ -8,9 +8,8 @@
     
 }
 .items-list{
-    padding: 1rem;
-    
-    margin-top: 2rem;
+    padding: 1rem;    
+    margin-top: 0rem;
 }
 .cart-header-no-border{
     width: 80%;
@@ -40,7 +39,9 @@
 }
 
 .summaryContainer{
-   max-height: 100%;
+    position: sticky;
+    top: 200px;
+    height:fit-content;
     display: flex;    
     align-items: center;
     margin: 3rem 1rem;
@@ -50,4 +51,40 @@
     box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
   -webkit-box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
+  }
+
+  @media (max-width: 768px) {   
+    .cart-view-container{
+      display: flex;
+      flex-wrap: wrap;    
+    }
+    .cartContainer{
+        width: 90%;
+        padding: 0.5rem;
+    }
+    .summaryContainer{
+        margin-top: 0rem;
+        width: 90%;
+        padding: .5rem;
+       position: relative;
+       top: 0px;
+    }
+    .summaryContainer .card{
+        height: 30%;
+        
+    }
+    .total-container{
+        margin: 0rem;
+    }
+    .cart-footer{
+        display: flex;
+        flex-direction: column;
+        row-gap: 1rem;
+    }
+  }
+  .checkout-msg{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 90vh;
   }
