--- a/src/components/ItemList/itemListContainer.css
+++ b/src/components/ItemList/itemListContainer.css
@@ -1,77 +1,81 @@
-.itemListContainer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 3rem auto;
-    background-color: #F0F2F0;
-    padding: 3rem;
-    border: none;
-    box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
-  -webkit-box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
-  -moz-box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
-  }
- 
+.itemListContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3rem auto;
+  background-color: #f0f2f0;
+  padding: 3rem;
+  border: none;
+  box-shadow: 10px 10px 24px -7px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 10px 10px 24px -7px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 24px -7px rgba(0, 0, 0, 0.75);
+}
 
-  .itemDetailContainer{
-    max-height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 3rem auto;
-    background-color: #F0F2F0;
-    padding: 3rem;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
-  -webkit-box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
-  -moz-box-shadow: 10px 10px 24px -7px rgba(0,0,0,0.75);
+.itemDetailContainer {
+  max-height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3rem auto;
+  background-color: #f0f2f0;
+  padding: 3rem;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 10px 10px 24px -7px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 10px 10px 24px -7px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 24px -7px rgba(0, 0, 0, 0.75);
+}
+@media (max-width: 425px) {
+  .itemDetailContainer {
+    padding: 0.5rem;
   }
-  @media (max-width: 425px) {   
-    .itemDetailContainer{
-        padding: 0.5rem;
-    }
-  }
+}
 
-  .imgArticuloDetail{
-    margin: 0 auto;
-   padding: 0.5rem;
-   max-width: 200px; 
-    
+.imgArticuloDetail {
+  margin: 0 auto;
+  padding: 0.5rem;
+  max-width: 200px;
+  max-height: 300px;
+}
+.item-detail {
+  height: auto;
+  padding: 3rem;
+}
+@media (max-width: 768px) {
+  .item-detail {
+    padding: 0.5rem;
   }
-  .item-detail{
-    height: auto;
-    padding: 3rem;
-     
-  }
-  @media (max-width: 768px) {   
-    .item-detail{
-        padding: 0.5rem;
-    }
-  }
- 
+}
 
-  .detail-header{
-    display: flex;
-  }
+.detail-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  @media (max-width: 620px) {
-    .detail-header{
-      flex-direction: column;
-    }
+@media (max-width: 620px) {
+  .detail-header {
+    flex-direction: column;
   }
+}
 
-  @media (max-width: 768px) {   
-    .imgArticuloDetail{
-      max-width: 200px; 
-    }
+@media (max-width: 768px) {
+  .imgArticuloDetail {
+    max-width: 200px;
   }
- 
-.detail-count{
+}
+
+.detail-count {
   max-width: 80%;
 }
 
-@media (max-width: 768px) {   
-  .article-name{
-    font-size: 2rem; 
+@media (max-width: 768px) {
+  .article-name {
+    font-size: 2rem;
   }
+}
+.nocat-msg {
+  display: flex;
+    align-items: center;
+    justify-content: center;
 }
